main test refactoring complete